<resources>
    <string name="app_name">EJournal</string>
    <string name="points"> points</string>
    <string name="title_activity_launch">LaunchActivity</string>
    <string name="chnu">ЧНУ</string>
    <string name="launch_welcome_text">Welcome to CHNU Journal</string>
    <string name="launch_sign_in">Sign in to view your schedule, track marks progress and make reports</string>
    <string name="sign_in_button_text">Sign in with Google</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_subject">Subject</string>
    <string name="title_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="server_id">300717966349-6p1td5j7ic9qsm0ra8clctg700n457ef.apps.googleusercontent.com</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="ukrainian">Ukrainian</string>
    <string name="russian">Russian</string>
    <string name="receive_notifications">Receive notifications</string>
    <string name="do_not_receive_notifications">Do not receive notifications</string>
    <string name="notifications">Notifications</string>
    <string name="night_mode">Night mode</string>
    <string name="enable_dark_color_scheme">Enable dark color scheme</string>
    <string name="disable_dark_color_scheme">Disable dark color scheme</string>

    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>

    <string name="sunday_short">Sun</string>
    <string name="monday_short">Mon</string>
    <string name="tuesday_short">Tue</string>
    <string name="wednesday_short">Wed</string>
    <string name="thursday_short">Thu</string>
    <string name="friday_short">Fri</string>
    <string name="saturday_short">Sat</string>

    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>

    <string name="january_short">Jan</string>
    <string name="february_short">Feb</string>
    <string name="march_short">Mar</string>
    <string name="april_short">Apr</string>
    <string name="may_short">May</string>
    <string name="june_short">Jun</string>
    <string name="july_short">Jul</string>
    <string name="august_short">Aug</string>
    <string name="september_short">Sep</string>
    <string name="october_short">Oct</string>
    <string name="november_short">Nov</string>
    <string name="december_short">Dec</string>

    <string name="schedule_day_list_text">%1$s. %2$d</string>


</resources>
