<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:fitsSystemWindows="true"
    tools:context=".fragments.settings.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <android.support.v7.widget.Toolbar
            android:id="@+id/settings_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/title_settings"
                android:textColor="?iconColor"
                android:textSize="24sp" />

        </android.support.v7.widget.Toolbar>


        <LinearLayout
            android:id="@+id/settings_language_Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal"
            android:paddingStart="32dp"
            android:paddingTop="8dp"
            android:paddingEnd="32dp"
            android:paddingBottom="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp"
                android:src="@drawable/ic_language_black_24dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/language"
                    android:textColor="?primaryTextColor"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/languageField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/english"
                    android:textColor="?secondaryTextColor" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="32dp"
            android:paddingTop="8dp"
            android:paddingEnd="32dp"
            android:paddingBottom="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp"
                android:src="@drawable/ic_notifications_none_black_24dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="40dp"
                    android:text="@string/notifications"
                    android:textColor="?primaryTextColor"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/notificationField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="40dp"
                    android:text="@string/receive_notifications"
                    android:textColor="?secondaryTextColor" />
            </LinearLayout>

            <Switch
                android:id="@+id/notificationsSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="32dp"
            android:paddingTop="8dp"
            android:paddingEnd="32dp"
            android:paddingBottom="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp"
                android:src="@drawable/ic_weather_night" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="40dp"
                    android:text="@string/night_mode"
                    android:textColor="?primaryTextColor"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/nightModeField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="40dp"
                    android:text="@string/enable_dark_color_scheme"
                    android:textColor="?secondaryTextColor" />
            </LinearLayout>

            <Switch
                android:id="@+id/nightModeSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>